Update Amazon sale report.ipynb

--- a/Amazon sale report.ipynb
+++ b/Amazon sale report.ipynb
@@ -21,7 +21,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df = pd.read_csv(r'C:\\Users\\vishw\\Desktop\\Python\\Datasets\\Amazon Sale Report.csv')"
+    "df = pd.read_csv(r'C:\\Datasets\Amazon_Sales.csv')"
    ]
   },
   {
